WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
33919
Intermittent crash when media element is adopted by another document
https://bugs.webkit.org/show_bug.cgi?id=33919
Summary
Intermittent crash when media element is adopted by another document
Eric Carlson
Reported
2010-01-20 14:23:36 PST
HTMLMediaElement registers with the document for activation and media volume change callbacks, so when it is moved to a new document it must unregister with the old document and reregister with the new document.
Attachments
Proposed patch
(5.75 KB, patch)
2010-01-20 14:41 PST
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2010-01-20 14:39:10 PST
<
rdar://problem/7557527
>
Eric Carlson
Comment 2
2010-01-20 14:41:47 PST
Created
attachment 47063
[details]
Proposed patch
Eric Carlson
Comment 3
2010-01-21 09:47:14 PST
trac.webkit.org/changeset/53629
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug