2010-01-21  Eric Carlson  <eric.carlson@apple.com>

Reviewed by Darin Adler.

        Intermittent crash when media element is adopted by another document
        https://bugs.webkit.org/show_bug.cgi?id=33919
        rdar://problem/7557527

        Test: media/adopt-node-crash.html

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::willMoveToNewOwnerDocument): Unregister for
        document callbacks.
        (WebCore::HTMLMediaElement::didMoveToNewOwnerDocument): Register for
        document callbacks.
        * html/HTMLMediaElement.h:

2010-01-21  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Darin Adler.

        Intermittent crash when media element is adopted by another document
        https://bugs.webkit.org/show_bug.cgi?id=33919
        rdar://problem/7557527

        This test does not always crash the un-patched version of WebKit because
        the crash is so timing-dependant.

        * media/adopt-node-crash-expected.txt: Added.
        * media/adopt-node-crash.html: Added.



Canonical link: https://commits.webkit.org/45028@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@53629 268f45cc-cd09-0410-ab3c-d52691b4dbfc